@@ -383,6 +383,7 @@ public:
 	int floating_control_margin;
 	int floating_control_width;
 	bool floating_control_animated;
+	bool floating_display_in_compact_mode;
 };
 
 #endif
