@@ -1,5 +1,10 @@
 [b]Version 0.6.4[/b]:
 
+(2008-10-05)
+ * Added a new option for smplayer.ini: display_in_compact_mode (under section
+   [floating_control]). If true the floating control will appear too in
+   compact mode. Note: it may not look very well in this mode...
+
 (2008-10-04)
  * (Linux) Now it's possible to choose the audio device to be used with alsa.
    It requires the application "aplay" to be installed.
